# skyrim-mod-auto-installer

./: .env.sample  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  poetry.toml  pyproject.toml  pytest.ini
collection_mod_urls/: cache.db
src/skyrim_mod_auto_installer/: __init__.py  collection_installer.py  constants.py  install_manager.py  manager.py  mod_installer.py  tab_driver.py  utils.py
src/skyrim_mod_auto_installer/application/: cli.py
tests/: test_run_auto_installer.py
tests/application/: test_cli_via_runner.py  test_cli_via_subprocess.py
