[tool.poetry]
name = "skyrim-mod-auto-installer"
version = "0.1.0"
description = "Automatically install skyrim mods instaed of having to manually going 1 by 1. Doesn't require premium NexusMods account."
authors = ["Matthew Coulter <53892067+mattcoulter7@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "skyrim_mod_auto_installer", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
selenium = "^4.25.0"
psutil = "*"
diskcache = "*"
typer = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^8.3.3"}
debugpy = {version = "^1.8.0"}
pyinstaller = {version = "^6.11.0"}
pytest-dotenv = {version = "^0.5.2"}

[tool.poetry.scripts]
smai = "skyrim_mod_auto_installer.application.cli:main"
skyrim_mod_auto_installer = "skyrim_mod_auto_installer.application.cli:main"
